# PDF_tools_outline

./: .gitignore  LEGGIMI.md  PDF_outline_add.py  README.md  main.py  prompt.txt  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
hooks/: pre-commit  pre-push
scr/: main.py  outline_model.py
tests/: test_args.py  test_extractor.py  test_nums.py  test_parser.py  test_writer.py  tests_description.md
tests/sample1/: index_ref.txt
tests/sample2/: index.txt  index2.txt  index3.txt  index_ref.txt
tests/sample3/: index.txt
tests/sample4/: index.txt  index_ref.txt
tests/sample5/: index.txt  index_ref_shifted.txt  index_ref_shifted2.txt  index_shifted.txt
tests/sample6/: index.txt
tests/sample7/: index.txt
