[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "PDF_outline"
dynamic = ["version"]
description = "A tool to edit the outline of a PDF file and shift page numbers to match printed ones"
authors = [
  {name = "agenius05"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.14"
dependencies = [
    "pikepdf>=10.5.0",
]
license-files = ["LICENSE"]
keywords=["cli", "tool"]

[tool.setuptools.packages.find]
where = ["scr"]

[project.scripts]
PDF_outline = "main:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"  # Genera .devN dopo l'ultimo tag
local_scheme = "no-local-version" # Rimuove +dYYYYMMDD (consigliato per release)
fallback_version = "0.1.dev0"

[project.urls]
Homepage="https://github.com/agenius05/PDF-outline-adder"
Repository="https://github.com/agenius05/PDF-outline-adder"